# morgan

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: formatting.yml  linting.yml  tests.yml
contrib/: show-old.sh
morgan/: __init__.py  __main__.py  configurator.py  metadata.py  server.py  utils.py
tests/: test_init.py  test_init_wheelscore.py  test_metadata_parser.py  test_server.py  test_utils.py
