[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "morgan"
dynamic = ["version"]
description = "PyPI Mirror for Offline/Restricted Environments"
authors = [
    { name="Ido Perlmuter", email="ido@ido50.net" },
]
license = { file="LICENSE" }
keywords = [ "pypi", "mirror", "packages", "pypi-mirror" ]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    #"packaging~=21.3",
        # hatchling 1.27.0 requires packaging>=24.2, but you have packaging 21.3 which is incompatible.
    "packaging~=24.2",
        # packaging.utils.InvalidSdistFilename: Invalid sdist filename (invalid version): 'expandvars-0.6.0-macosx-10.15-x86_64.tar.gz' (old versions)
        # solved in morgan/__init__.py
    "importlib-metadata~=4.12.0; python_version < '3.8'",
    "tomli~=2.0.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.optional-dependencies]
test = ["pytest~=7.1.3"]

[tool.hatch.version]
path = "morgan/__about__.py"

[project.urls]
"Homepage" = "https://github.com/ido50/morgan"
"Repository" = "https://github.com/ido50/morgan"
"Bug Tracker" = "https://github.com/ido50/morgan/issues"
"Changelog" = "https://github.com/ido50/morgan/releases"

[project.scripts]
morgan = "morgan:main"

[tool.black]
line-length = 80
target-version = ['py37']
