[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "morgan"
dynamic = ["version"]
description = "PyPI Mirror for Offline/Restricted Environments"
authors = [
    { name="Ido Perlmuter", email="ido@ido50.net" },
]
license = { file="LICENSE" }
keywords = [ "pypi", "mirror", "packages", "pypi-mirror" ]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "packaging~=24.0; python_version == '3.7'",
    "packaging~=24.2; python_version >= '3.8'",
    "importlib-metadata~=4.12.0; python_version < '3.8'",
    "tomli~=2.0.1",
    "python-dateutil",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.optional-dependencies]
test = ["pytest~=7.1.3"]
lint = [
    "ruff~=0.14.3",
    "mypy~=1.19.1",
    "importlib-metadata", # required by mypy for all Python versions
]

[tool.hatch.version]
path = "morgan/__about__.py"

[project.urls]
"Homepage" = "https://github.com/ido50/morgan"
"Repository" = "https://github.com/ido50/morgan"
"Bug Tracker" = "https://github.com/ido50/morgan/issues"
"Changelog" = "https://github.com/ido50/morgan/releases"

[project.scripts]
morgan = "morgan:main"

[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",  # don't enforce annotations
    "D10",  # don't enforce docstrings
    "D2",   # don't enforce pydoc style
    "D4",   # don't enforce pydoc style
    "E501", # ignore line-too-long as we ruff format is enforced anyway
    "PTH",  # ignore pathlib suggestions
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",     # exclude annotations from test files
    "ARG",     # Unused function args might be fixtures
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "INP001",  # "implicit namespace package" is invalid for pytest
    "PLR2004", # allow magic-value-comparison in tests
    "S101",    # asserts are allowed in tests
]

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true
